Resolve expiration unlock condition on API request (#13)
* feat: Resolve expiration unlock conditions

* fix: LATEST_CHECKPOINT_UNIX_TIMESTAMP time units

* fix: convert unix_time to ms

* feat: Add separate endpoints for resolving expiration unlock conditions

* refactor: Improve global comment

* refactor: Replace AtomicUsize with AtomicU64
